# kronometer

./: .arcconfig  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  CHANGELOG  CMakeLists.txt  Messages.sh  README  README.md  TODO  digitdisplay.h  hisc-apps-kronometer.svgz  kronometer.desktop  kronometer.kcfg  kronometerui.rc  lapmodel.cpp  lapmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  qdigitdisplay.cpp  qdigitdisplay.h  qstopwatch.cpp  qstopwatch.h  qtimedisplay.cpp  qtimedisplay.h  qtimeformat.cpp  qtimeformat.h  snapcraft.yaml  stopwatch.cpp  stopwatch.h  timedisplay.cpp  timedisplay.h  timeformat.cpp  timeformat.h  utils.cpp  utils.h
autotests/: CMakeLists.txt  testlap.cpp  testlap.h  testsession.cpp  testsession.h  teststopwatch.cpp  teststopwatch.h  testtimedisplay.cpp  testtimeformat.cpp  testtimeformat.h
autotests/core/: CMakeLists.txt  testlap.cpp  testlap.h  testsession.cpp  testsession.h  teststopwatch.cpp  teststopwatch.h  testtimeformat.cpp  testtimeformat.h
autotests/gui/: CMakeLists.txt  testtimedisplay.cpp  testtimedisplay.h
desktop/: CMakeLists.txt  org.kde.kronometer.appdata.xml  org.kde.kronometer.desktop
doc/: CMakeLists.txt  index.docbook  man-kronometer.1.docbook
flatpak/: org.kde.kronometer.json
icons/: CMakeLists.txt  sc-apps-kronometer.svgz
po/ar/: kronometer.po
po/ast/: kronometer.po
po/bs/: kronometer.po
po/ca/: kronometer.po
po/ca/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/ca@valencia/: kronometer.po
po/cs/: kronometer.po
po/da/: kronometer.po
po/de/: kronometer.po
po/de/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/el/: kronometer.po
po/en_GB/: kronometer.po
po/eo/: kronometer.po
po/es/: kronometer.po
po/es/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/et/: kronometer.po
po/eu/: kronometer.po
po/fi/: kronometer.po
po/fr/: kronometer.po
po/ga/: kronometer.po
po/gl/: kronometer.po
po/he/: kronometer.po
po/hu/: kronometer.po
po/ia/: kronometer.po
po/it/: kronometer.po
po/it/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/ja/: kronometer.po
po/ka/: kronometer.po
po/ko/: kronometer.po
po/lt/: kronometer.po
po/lv/: kronometer.po
po/nds/: kronometer.po
po/nl/: kronometer.po
po/nl/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/nn/: kronometer.po
po/pl/: kronometer.po
po/pt/: kronometer.po
po/pt/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/pt_BR/: kronometer.po
po/pt_BR/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/ro/: kronometer.po
po/ru/: kronometer.po
po/sa/: kronometer.po
po/sk/: kronometer.po
po/sl/: kronometer.po
po/sl/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/sv/: kronometer.po
po/sv/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/tr/: kronometer.po
po/tr/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/ug/: kronometer.po
po/uk/: kronometer.po
po/uk/docs/kronometer/: index.docbook  man-kronometer.1.docbook
po/zh_CN/: kronometer.po
po/zh_TW/: kronometer.po
src/: CMakeLists.txt  Mainpage.dox  digitdisplay.cpp  digitdisplay.h  kronometer.appdata.xml  kronometer.desktop  kronometer.kcfg  kronometerui.rc  lap.cpp  lap.h  lapmodel.cpp  lapmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.kronometer.appdata.xml  org.kde.kronometer.desktop  session.cpp  session.h  sessiondialog.cpp  sessiondialog.h  sessiondialog.ui  sessionmodel.cpp  sessionmodel.h  settings.kcfgc  stopwatch.cpp  stopwatch.h  timedisplay.cpp  timedisplay.h  timedisplay.ui  timeformat.cpp  timeformat.h
src/core/: CMakeLists.txt  lap.cpp  lap.h  session.cpp  session.h  stopwatch.cpp  stopwatch.h  timeformat.cpp  timeformat.h
src/gui/: CMakeLists.txt  colorsettings.cpp  colorsettings.h  digitdisplay.cpp  digitdisplay.h  fontsettings.cpp  fontsettings.h  fontsettings.ui  generalsettings.cpp  generalsettings.h  generalsettings.ui  kronometer.kcfg  kronometerui.qrc  kronometerui.rc  lapitemdelegate.cpp  lapitemdelegate.h  mainwindow.cpp  mainwindow.h  sessiondialog.cpp  sessiondialog.h  sessiondialog.ui  settings.kcfgc  timedisplay.cpp  timedisplay.h  timedisplay.ui
src/icons/: CMakeLists.txt
src/models/: CMakeLists.txt  lapmodel.cpp  lapmodel.h  sessionmodel.cpp  sessionmodel.h
src/widgets/: colorsettings.h  colorsettings.ui  fontsettings.h  fontsettings.ui  generalsettings.cpp  generalsettings.h  generalsettings.ui  guisettings.h  guisettings.ui  savesettings.ui
tests/: CMakeLists.txt  testlap.cpp  testlap.h  testsession.cpp  teststopwatch.cpp  testtimeformat.cpp  testtimeformat.h
widgets/: colorsettings.h  colorsettings.ui  fontsettings.h  fontsettings.ui  generalsettings.h  generalsettings.ui  guisettings.h  guisettings.ui  savesettings.h  savesettings.ui
